# sway-systemd

./: README.md  meson.build  meson_options.txt  rpkg.conf  setup.cfg  sway-session.target  sway-session@.target  sway-xdg-autostart.target
config.d/: 10-systemd-cgroups.conf.in  10-systemd-session.conf.in  95-system-keyboard-config.conf.in  95-xdg-desktop-autostart.conf.in
src/: assign-cgroups.py  locale1-xkb-config  locale1.py  session.sh  start-session.sh  wait-sni-ready
srpm/: rpkg.macros  sway-systemd.spec.rpkg
units/: sway-session-shutdown.target  sway-session.target
