# TODO: convert to boolean
option('cgroups', type: 'feature', value: 'disabled',
       description: 'Install script for assigning cgroups to applications')
option('locale1', type: 'boolean', value: false,
       description: 'Install script for applying org.freedesktop.locale1 input configuration to Sway')
